[fix] : overflow-x : hidden in index.css body

--- a/src/components/ShowMenuDetail.css
+++ b/src/components/ShowMenuDetail.css
@@ -3,4 +3,7 @@
   padding: 2%;
   border-radius: 50px;
   background-color: #e2ebde;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
